--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Radiency.ai - Automate your Operational metrics</title>
+    <title>Radiancy.ai - Automate your Operational metrics</title>
     <meta
-      content="Radiency.ai - Automate your Operational metrics"
+      content="Radiancy.ai - Automate your Operational metrics"
       property="og:title"
     />
     <meta
-      content="Radiency.ai - Automate your Operational metrics"
+      content="Radiancy.ai - Automate your Operational metrics"
       property="twitter:title"
     />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -88,7 +88,7 @@
           data-default-duration="1.1666666666666667"
           data-duration="1.1666666666666667"
         ></div>
-        <h1 class="arete-logo white">Radiency.ai</h1>
+        <h1 class="arete-logo white">Radiancy.ai</h1>
       </div>
     </div>
     <div
@@ -117,7 +117,7 @@
             "
             class="image-2"
           />
-          <h1 class="logo">Radiency.ai</h1>
+          <h1 class="logo">Radiancy.ai</h1>
         </a>
         <nav role="navigation" class="nav-menu w-nav-menu"></nav>
         <div class="menu-button w-nav-button">
@@ -164,7 +164,7 @@
                 Save time and automate your Ops work with us!
               </h1>
               <p>
-                Radiency eliminates manual, repetitive Ops work that drains your
+                Radiancy eliminates manual, repetitive Ops work that drains your
                 Developer team and your budget using our Large language model,
                 so your Developers can focus on building better products.<a
                   href="https://www.luminai.com/blog/luminai-is-soc-2-type-i-compliant"
@@ -447,7 +447,7 @@
             >
               <div class="inner-text">
                 <div class="w-layout-grid grid-cta">
-                  <h2 class="title-cta">Improve your business with Radiency</h2>
+                  <h2 class="title-cta">Improve your business with Radiancy</h2>
                   <div class="symbol">
                     <img
                       src="https://uploads-ssl.webflow.com/63bc2ef87fa314d2b0bded34/63be1afcac4c2ac551edebc5_icons8-kite-shape-90.png"
@@ -460,7 +460,7 @@
                   </div>
                 </div>
                 <div class="w-layout-grid grid-cta">
-                  <h2 class="title-cta">Improve your business with Radiency</h2>
+                  <h2 class="title-cta">Improve your business with Radiancy</h2>
                   <div class="symbol">
                     <img
                       src="https://uploads-ssl.webflow.com/63bc2ef87fa314d2b0bded34/63be1afcac4c2ac551edebc5_icons8-kite-shape-90.png"
@@ -473,7 +473,7 @@
                   </div>
                 </div>
                 <div class="w-layout-grid grid-cta">
-                  <h2 class="title-cta">Improve your business with Radiency</h2>
+                  <h2 class="title-cta">Improve your business with Radiancy</h2>
                   <div class="symbol">
                     <img
                       src="https://uploads-ssl.webflow.com/63bc2ef87fa314d2b0bded34/63be1afcac4c2ac551edebc5_icons8-kite-shape-90.png"
@@ -486,7 +486,7 @@
                   </div>
                 </div>
                 <div class="w-layout-grid grid-cta">
-                  <h2 class="title-cta">Improve your business with Radiency</h2>
+                  <h2 class="title-cta">Improve your business with Radiancy</h2>
                   <div class="symbol">
                     <img
                       src="https://uploads-ssl.webflow.com/63bc2ef87fa314d2b0bded34/63be1afcac4c2ac551edebc5_icons8-kite-shape-90.png"
