--- a/index.html
+++ b/index.html
@@ -225,10 +225,11 @@
                 />
               </div>
               <div class="features-info">
-                <h5><strong>API failure Root Cause Analysis</strong></h5>
+                <h5><strong>Operational Buddy</strong></h5>
                 <p>
-                  We track your API dips and root cause the incident so you
-                  don&#x27;t have to dig through logs.
+                  Radiancy integrates with the service stack of customers and
+                  uses all available information to suggest actionable
+                  solutions.
                 </p>
               </div>
             </div>
@@ -245,11 +246,11 @@
                 />
               </div>
               <div class="features-info">
-                <h5>Easy to use dashboard</h5>
+                <h5>Contextual Solutions</h5>
                 <p>
-                  You can choose to create custom dashboard on our platform with
-                  data from multiple sources like Splunk, DataDog, Prometheus
-                  etc.
+                  Radiancy understand the service like a developer in their team
+                  and provides context of the ongoing issue and actionable
+                  remediations.
                 </p>
               </div>
             </div>
@@ -266,10 +267,12 @@
                 />
               </div>
               <div class="features-info">
-                <h5><strong>API latency insights and report</strong></h5>
+                <h5><strong>Reduce dependency on APM</strong></h5>
                 <p>
-                  With one click from your metrics platform get insights into
-                  what caused dips in API performance
+                  Radiancy empowers the developer to focus on innovating by
+                  reducing Ops load by integrating with Customer’s APM or
+                  traditional logging and monitoring system, giving a one-click
+                  solution for an ongoing issue.
                 </p>
               </div>
             </div>
@@ -286,11 +289,11 @@
                 />
               </div>
               <div class="features-info">
-                <h5>Auto generate Business Metrics</h5>
+                <h5>Collaboration with AI</h5>
                 <p>
-                  We understand the time and effort it takes to collect business
-                  metrics. Our Generative AI automatically creates report by
-                  analyzing data that you already have
+                  Collaborate with AI as you would with a Virtual Teammate. For
+                  example: Ask Radiancy to get insights into what caused dips in
+                  API performance.
                 </p>
               </div>
             </div>
