--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Radiancy.ai - Automate your Operational metrics</title>
+    <title>Radiancy - Automate your Operational Buddy</title>
     <meta
       content="Radiancy.ai - Automate your Operational metrics"
       property="og:title"
@@ -88,7 +88,7 @@
           data-default-duration="1.1666666666666667"
           data-duration="1.1666666666666667"
         ></div>
-        <h1 class="arete-logo white">Radiancy.ai</h1>
+        <h1 class="arete-logo white">Radiancy</h1>
       </div>
     </div>
     <div
@@ -117,7 +117,7 @@
             "
             class="image-2"
           />
-          <h1 class="logo">Radiancy.ai</h1>
+          <h1 class="logo">Radiancy</h1>
         </a>
         <nav role="navigation" class="nav-menu w-nav-menu"></nav>
         <div class="menu-button w-nav-button">
